add: modify stock
