# app/Modules/Inventaris/Controllers/InventarisController.php
@@ -5,6 +5,7 @@ namespace App\Modules\Inventaris\Controllers;
 use App\Helpers\PaginationHelper;
 use App\Helpers\ResponseHelper;
 use App\Http\Controllers\Controller;
+use App\Http\Requests\InventarisModifyStockRequest;
 use App\Modules\Inventaris\Requests\InventarisStoreRequest;
 use App\Modules\Inventaris\Requests\InventarisUpdateRequest;
 use App\Modules\Inventaris\Services\InventarisService;
@@ -119,6 +120,22 @@ class InventarisController extends Controller
     {
         try {
             return InventarisService::qrcodeFrom($id);
+        } catch (\Throwable $th) {
+            Log::error($th->getMessage());
+
+            return ResponseHelper::error($th, 'Terjadi kesalahan saat menjalankan aksi');
+        }
+    }
+
+    public function modifyStock(int $id, InventarisModifyStockRequest $request)
+    {
+        try {
+            $success = InventarisService::modifyStock($id, $request->validated());
+            if ($success) {
+                return ResponseHelper::successWithData(null, 'Stok berhasil di modifikasi');
+            } else {
+                return ResponseHelper::badRequest('Stok gagal di modifikasi');
+            }
         } catch (\Throwable $th) {
             Log::error($th->getMessage());
 
