# routes/api/v1/master.php
@@ -17,6 +17,7 @@ Route::group([
         Route::get('/inventaris/options', [InventarisController::class, 'options'])->name('inventaris.options');
         Route::get('/inventaris/get-by-qr/{qrcode}', [InventarisController::class, 'getByQrcode'])->name('inventaris.get-by-qr');
         Route::get('/inventaris/not-empty-stock', [InventarisController::class, 'notEmptyStock'])->name('inventaris.not-empty-stock');
+        Route::put('/inventaris/{id}/modify-stock', [InventarisController::class, 'modifyStock'])->name('inventaris.not-empty-stock');
         Route::resource('inventaris', InventarisController::class);
     });
 });
